--- a/apps/monitoring/prometheus/kustomization.yaml
+++ b/apps/monitoring/prometheus/kustomization.yaml
@@ -1,7 +1,10 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 helmCharts:
   - name: prometheus
     repo: https://prometheus-community.github.io/helm-charts
-    version: 25.21.0
     releaseName: prometheus
     namespace: monitoring
+    version: 25.18.0
     valuesFile: prometheus-values.yaml
