--- a/apps/monitoring/grafana/grafana-values.yaml
+++ b/apps/monitoring/grafana/grafana-values.yaml
@@ -1,15 +1,13 @@
+adminUser: admin
 adminPassword: admin
 
 service:
   type: NodePort
-  nodePort: 30080
+  port: 80
 
-datasources:
-  datasources.yaml:
-    apiVersion: 1
-    datasources:
-      - name: Prometheus
-        type: prometheus
-        access: proxy
-        url: http://prometheus-server.monitoring.svc.cluster.local
-        isDefault: true
+ingress:
+  enabled: false
+
+persistence:
+  enabled: false
+
