--- a/apps/monitoring/prometheus/kustomization.yaml
+++ b/apps/monitoring/prometheus/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-  - name: prometheus
+  - name: kube-prometheus-stack
     repo: https://prometheus-community.github.io/helm-charts
-    version: 25.18.0
+    version: 55.5.0
     releaseName: prometheus
-    namespace: monitoring
+    namespace: prometheus
     valuesFile: prometheus-values.yaml
