--- a/argocd/grafana-app.yaml
+++ b/argocd/grafana-app.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 7.3.10
     helm:
       valueFiles:
-        - grafana/values.yaml
+        - apps/grafana/values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
