--- a/apps/grafana/values.yaml
+++ b/apps/grafana/values.yaml
@@ -20,7 +20,7 @@ datasources:
     datasources:
       - name: Prometheus
         type: prometheus
-        url: http://prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
+        url: http://prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local:9090
         access: proxy
         isDefault: true
 
