--- a/argocd/prometheus-app.yaml
+++ b/argocd/prometheus-app.yaml
@@ -10,14 +10,13 @@ spec:
     - repoURL: https://prometheus-community.github.io/helm-charts
       chart: prometheus
       targetRevision: 25.8.2
+      helm:
+        valueFiles:
+          - $values/apps/prometheus/values.yaml
 
     - repoURL: https://github.com/ChristianAcostaMz/example_argocd.git
       targetRevision: main
       ref: values
-
-  helm:
-    valueFiles:
-      - values://apps/prometheus/values.yaml
 
   destination:
     server: https://kubernetes.default.svc
