--- a/apps/grafana/values.yaml
+++ b/apps/grafana/values.yaml
@@ -24,3 +24,14 @@ datasources:
         access: proxy
         isDefault: true
 
+ingress:
+  enabled: true
+  ingressClassName: nginx
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+  hosts:
+    - host: grafana.local
+      paths:
+        - path: /
+          pathType: Prefix
+  tls: []
