--- a/apps/nginx/values.yaml
+++ b/apps/nginx/values.yaml
@@ -1,3 +1,7 @@
 controller:
   service:
     type: LoadBalancer
+    loadBalancerIP: 192.168.0.241
+    annotations:
+      metallb.universe.tf/address-pool: local-pool
+
