--- a/argocd/nginx-app.yaml
+++ b/argocd/nginx-app.yaml
@@ -5,17 +5,28 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://github.com/ChristianAcostaMz/example_argocd.git
-    targetRevision: HEAD
-    path: apps/nginx
+
+  sources:
+    - repoURL: https://kubernetes.github.io/ingress-nginx
+      chart: ingress-nginx
+      targetRevision: 4.10.0
+      helm:
+        valueFiles:
+          - $values/apps/nginx/values.yaml
+
+    - repoURL: https://github.com/ChristianAcostaMz/example_argocd.git
+      targetRevision: main
+      ref: values
+
   destination:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
+
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+
 
