--- a/argocd/argocd-ingress.yaml
+++ b/argocd/argocd-ingress.yaml
@@ -4,8 +4,9 @@ metadata:
   name: argocd-ingress
   namespace: argocd
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    kubernetes.io/ingress.class: nginx
 spec:
+  ingressClassName: nginx
   rules:
     - host: argocd.local
       http:
@@ -16,5 +17,6 @@ spec:
               service:
                 name: argocd-server
                 port:
-                  number: 443
+                  number: 80
+
 
