--- a/argocd/nginx-app.yaml
+++ b/argocd/nginx-app.yaml
@@ -28,5 +28,8 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ApplyOutOfSyncOnly=true
+      - ServerSideApply=true
+      - RespectIgnoreDifferences=true
 
 
