--- a/apps/flask/ingress.yaml
+++ b/apps/flask/ingress.yaml
@@ -1,23 +1,20 @@
-# argocd/argocd-ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: argocd-ingress
-  namespace: argocd
+  name: flask-ingress
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
   ingressClassName: nginx
   rules:
-    - host: argocd.local
+    - host: flask.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: argocd-server
+                name: flask
                 port:
                   number: 80
-
-
