--- a/apps/grafana/values.yaml
+++ b/apps/grafana/values.yaml
@@ -20,18 +20,7 @@ datasources:
     datasources:
       - name: Prometheus
         type: prometheus
-        url: http://prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local:9090
+        url: http://prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
         access: proxy
         isDefault: true
 
-ingress:
-  enabled: true
-  ingressClassName: nginx
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-  hosts:
-    - host: grafana.local
-      paths:
-        - path: /
-          pathType: Prefix
-  tls: []
