--- a/argocd/grafana-app.yaml
+++ b/argocd/grafana-app.yaml
@@ -17,6 +17,9 @@ spec:
     - repoURL: https://github.com/ChristianAcostaMz/example_argocd.git
       targetRevision: main
       ref: values
+      path: apps/grafana
+      directory:
+        recurse: true
 
   destination:
     server: https://kubernetes.default.svc
