--- a/argocd/gitlab-agent.yaml
+++ b/argocd/gitlab-agent.yaml
@@ -9,7 +9,7 @@ spec:
   sources:
     - repoURL: https://charts.gitlab.io
       chart: gitlab-agent
-      targetRevision: 18.1.0
+      targetRevision: v2.16.0
       helm:
         valueFiles:
           - $values/apps/gitlab-agent/values.yaml
