--- a/apps/gitlab-agent/values.yaml
+++ b/apps/gitlab-agent/values.yaml
@@ -2,5 +2,5 @@ image:
   tag: v18.1.0
 
 config:
-  token: glagent-4AzhWeQc3qKjKWoZLGQBLjCCZ7yoPDQqa8H9j-hn24FenyfLhg
-  kasAddress: ws://192.168.0.15:8929/-/kubernetes-agent/
+  token: "glagent-QSqvPaWxtyjFsRG3Ezd_Njz7b_e37PAiEs_z_vg4drv6TFWwsg"
+  kasAddress: "ws://192.168.0.15:8929/-/kubernetes-agent/"
