--- a/apps/flask/ingress.yaml
+++ b/apps/flask/ingress.yaml
@@ -3,18 +3,15 @@ kind: Ingress
 metadata:
   name: flask-ingress
   namespace: default
-  annotations:
-    kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: nginx
   rules:
-    - host: flask.local
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: flask
-                port:
-                  number: 80
+  - host: flask-app.miusuario.duckdns.org  # Aquí defines el subdominio para acceder
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: flask  # Nombre de tu servicio de Flask en Kubernetes
+            port:
+              number: 80  # El puerto donde está expuesto el servicio de Flask
