--- a/apps/flask/service.yaml
+++ b/apps/flask/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask
+  name: flask # O flask-app-service, pero debe coincidir con el Ingress
 spec:
   selector:
     app: flask
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 80 # El Service escucha en el puerto 80
+      targetPort: 80 # Reenvía al puerto 80 del pod
   type: ClusterIP
