--- a/apps/grafana/ingress.yaml
+++ b/apps/grafana/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: grafana.local
+    - host: grafana.ubuntuarm1.duckdns.org
       http:
         paths:
           - path: /
