--- a/apps/nginx/values.yaml
+++ b/apps/nginx/values.yaml
@@ -1,6 +1,9 @@
 controller:
   service:
-    type: LoadBalancer
+    type: NodePort
+    nodePorts:
+      http: 30080
+      https: 30443
   #  annotations:
   #    metallb.universe.tf/address-pool: local-pool
 
