--- a/apps/nginx/values.yaml
+++ b/apps/nginx/values.yaml
@@ -1,9 +1,6 @@
 controller:
   service:
-    type: NodePort
-    nodePorts:
-      http: 30080
-      https: 30443
+    type: LoadBalancer
   #  annotations:
   #    metallb.universe.tf/address-pool: local-pool
 
