--- a/argocd/argocd-ingress.yaml
+++ b/argocd/argocd-ingress.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: argocd.homelab-cacom.duckdns.org
+    - host: argocd.cacom.me
       http:
         paths:
           - path: /
@@ -24,5 +24,5 @@ spec:
                   number: 443
   tls:
     - hosts:
-        - argocd.homelab-cacom.duckdns.org
+        - argocd.cacom.me
       secretName: argocd-autogen-tls
