--- a/apps/grafana/values.yaml
+++ b/apps/grafana/values.yaml
@@ -20,7 +20,7 @@ datasources:
     datasources:
       - name: Prometheus
         type: prometheus
-        url: http://prometheus-operated.monitoring.svc.cluster.local:9090
+        url: http://prometheus-server.monitoring.svc.cluster.local
         access: proxy
         isDefault: true
 
