--- a/apps/jenkins-agents/jenkins-admin-sa.yaml
+++ b/apps/jenkins-agents/jenkins-admin-sa.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: jenkins-admin
-  namespace: devops-tools
+  name: jenkins-admin # Asegúrate de que el nombre sea este
+  namespace: devops-tools # ¡MUY IMPORTANTE!
