--- a/apps/jenkins-agents/jenkins-role.yaml
+++ b/apps/jenkins-agents/jenkins-role.yaml
@@ -1,8 +1,8 @@
-apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: jenkins
-  namespace: devops-tools
+  namespace: devops-tools # ¡MUY IMPORTANTE!
   labels:
     "app.kubernetes.io/name": 'jenkins'
 rules:
@@ -17,4 +17,7 @@ rules:
   verbs: ["get","list","watch"]
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get"] # Necesario para que Jenkins pueda leer el token del secret
+  verbs: ["get"]
+- apiGroups: [""]
+  resources: ["events"] # <-- El permiso de "events" que añadimos
+  verbs: ["watch"]
