--- a/apps/jenkins-agents/sa-token-secret.yaml
+++ b/apps/jenkins-agents/sa-token-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: sa-token-secret # Nombre que usaste antes, mantengámoslo
+  name: sa-token-secret
   namespace: devops-tools
   annotations:
-    kubernetes.io/service-account.name: jenkins-admin # Vincula este secret a la ServiceAccount
+    kubernetes.io/service-account.name: jenkins-admin
 type: kubernetes.io/service-account-token
